--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */ 
 
+            /* 
+            Shorthand Background
+            color > image > position > repeat > [size] > attachment
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +37,13 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nostrum, alias, veniam voluptatum sit consequatur nobis commodi rem quas impedit dolorem cupiditate incidunt perspiciatis doloribus totam aut dolores consectetur quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus atque minus consectetur id aspernatur velit dignissimos illo quod laboriosam vitae voluptates cum maiores odit, itaque laudantium culpa ab vero accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque veritatis accusantium dicta aliquid explicabo, laborum, a quos quia fugiat soluta exercitationem odit amet, sed saepe quaerat sunt nesciunt recusandae aspernatur.</p>
+
+
     </main>    
 </body>
 </html>
